Fix last wave svg overflow issue

--- a/src/scss/_getIt.scss
+++ b/src/scss/_getIt.scss
@@ -14,6 +14,7 @@
 		flex-direction: column;
 		justify-content: flex-start;
 		align-items: center;
+		overflow: hidden;
 
 		.wave {
 			width: 200vw;
